<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context="com.example.rqg.bledemo.CommandActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="see output in logcat"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="syncAndLogBlock"
            android:text="同步并打印Block"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="vibrate"
            android:text="震动"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="syncTime"
            android:text="同步时间"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="readBattery"
            android:text="读取电量"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendIncoming"
            android:text="发送来电提醒"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="cancelIncoming"
            android:text="取消来电提醒"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendMissIncoming"
            android:text="发送未接来电"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendQQMsg"
            android:text="发送QQ消息"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendWechatMsg"
            android:text="发送微信消息"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="cancelWechatMsg"
            android:text="取消微信消息"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendSMS"
            android:text="发送短信"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Call"/>

            <CheckBox
                android:id="@+id/cb_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sms"/>

            <CheckBox
                android:id="@+id/cb_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="QQ"/>

            <CheckBox
                android:id="@+id/cb_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wechat"/>

        </LinearLayout>


        <include
            layout="@layout/fragment_screen"/>


        <!--智能心率监测-->
        <RelativeLayout

            style="@style/SetItem.Padding"
            android:layout_marginTop="10dp"
            android:clickable="false">


            <TextView
                style="@style/CommonText.ItemBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/bong_2s_smart_heart"/>

            <Switch
                android:id="@+id/sb_smart_heart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="16dp"/>
        </RelativeLayout>


        <RelativeLayout
            style="@style/SetItem.Padding"
            android:background="@color/white"
            android:clickable="true">


            <TextView
                style="@style/CommonText.ItemBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/card_set_no_disturb"/>

            <Switch
                android:id="@+id/no_disturb_switch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="16dp"/>
        </RelativeLayout>


        <!--久坐提醒-->
        <RelativeLayout
            android:id="@+id/rl_sit_remind"
            style="@style/SetItem.Padding"
            android:clickable="false">


            <TextView
                style="@style/CommonText.ItemBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/bong_2s_sit_remind"/>

            <Switch
                android:id="@+id/sb_sit_remind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="16dp"/>
        </RelativeLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="setAlarms"
            android:text="设置闹钟"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="restartBong"
            android:text="重启"/>


        <include
            layout="@layout/fragment_content"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendWeatherInfo"
            android:text="发送天气信息"/>


    </LinearLayout>


</ScrollView>